minor label fix

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         <div id="successModal" class="modal">
           <div class="modal-content">
             <span class="close">&times;</span>
-            <p><strong>Thank you!</strong>strong> 
+            <p><strong>Thank you!</strong></p>
             <p>Your registration is submitted successfully.</p>
             <p style="color: #4b0082;">Registration Id: <span id="registrationId">...</span></p>
             <img src="thankyou.png" alt="Thank you" class="img-fluid" />
