--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <!-- Tab Navigation -->
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active" data-bs-toggle="tab" href="#newRegistration">Submit New Registration</a>
+                    <a class="nav-link active" data-bs-toggle="tab" href="#newRegistration">Registration</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-bs-toggle="tab" href="#dashboard">Dashboard</a>
