fix for handling particpant vs winner modes

--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
                     };
     
                     // Step 4: Send data using fetch with payload
-                    fetch("https://script.google.com/macros/s/AKfycbwl_v8-ZtC5srPspp-r1uiwcea9mn0sHrbTejI-MPZ_F3mQ3xhjix12uabMJq-kLiyppw/exec", {
+                    fetch("https://script.google.com/macros/s/AKfycbzdDYo3qkpPIOx-6w7HmD3PTSU9esoX5xeVXUCkwNqWhImHGM7FV6P_woOuuxDif_GG/exec?mode=participant", {
                             redirect: "follow",
                             method: "POST",
                             headers: {
