--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a class="nav-link" data-bs-toggle="tab" href="#planningreport" id="planningReportTab">Planning Report</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-bs-toggle="tab" href="#paymentreport" id="paymentReportTab">Planning Report</a>
+                    <a class="nav-link" data-bs-toggle="tab" href="#paymentreport" id="paymentReportTab">Payment Report</a>
                 </li>
             </ul>
             <!-- Tab Content -->
