updated service URL and added payment report tab

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                     <a class="nav-link" data-bs-toggle="tab" href="#dashboard">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-bs-toggle="tab" href="#planningreport" id="planningReportTab">Planning Report</a>
+                    <a class="nav-link" data-bs-toggle="tab" href="#planningreport" id="planningReportTab">Planning</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-bs-toggle="tab" href="#paymentreport" id="paymentReportTab">Payment Report</a>
+                    <a class="nav-link" data-bs-toggle="tab" href="#paymentreport" id="paymentReportTab">Payment</a>
                 </li>
             </ul>
             <!-- Tab Content -->
