--- a/index.html
+++ b/index.html
@@ -426,6 +426,15 @@
                 <button id="loginButton" class="btn btn-primary">Login</button>
             </div>
         </div>
+        <div id="registrationClosedModal" class="modal">
+            <div class="modal-content">
+                <p><strong>Thank you!</strong></p>
+                <p>Z1 Winterfest 2024 registrations are closed now.</p>
+                <p style="color: #4b0082;">You may reach out via WhatsApp for any support needed.</p>
+                <img src="thankyou.png" alt="Thank you" class="img-fluid" />
+                &nbsp
+            </div>
+        </div>
         <!-- JavaScript for dynamic management -->
         <script>
             const backendUrl = "https://script.google.com/macros/s/AKfycbwe5MGWm-G8LX5mfoows_MiM9Y-v1C2APFRW9QFED6N1eMIhoOSWsKhFv9UqV9oLFSPBA/exec";
@@ -474,7 +483,7 @@
                         { name: "Spelling Bee", ageGroups: ["6to10yrs", "11to16yrs"], teamBased: false },
                     ],
                 },
-                {
+                /*{
                     category: "Sports",
                     competitions: [
                         { name: "8 Ball Pool", ageGroups: ["17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: false, displayAgeGroups: "" },
@@ -493,7 +502,7 @@
                         { name: "Kabaddi (Teams of 9)", ageGroups: ["6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: true, displayAgeGroups: "Up to 16, 17 & above" },
                         { name: "Swimming", ageGroups: ["3to5yrs", "6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: false, displayAgeGroups: "" },
                     ],
-                },
+                },*/
             ];
 
             var paymentScreenshotBytes = null;
@@ -503,6 +512,9 @@
             const foodStallCheckboxSelector = "#date-10nov, #date-16nov, #date-17nov, #date-23nov, #date-24nov, #date-30nov, #date-1dec, #date-7dec, #date-8dec";
 
             document.addEventListener("DOMContentLoaded", function () {
+                const registrationsClosedModal = document.getElementById("registrationClosedModal");
+                //registrationsClosedModal.style.display = "block";
+
                 const form = document.getElementById("registrationForm");
                 const submitBtn = document.getElementById("submitBtn");
 
