fix to be able to view dashboard and reports

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </ul>
             <!-- Tab Content -->
             <div class="tab-content">
-                <div id="newRegistration" class="tab-pane fade show active">
+                <div id="newRegistration" class="tab-pane fade">
                     <div class="container py-5">
                         <!-- Welcome Section -->
                         <section class="mb-4">
@@ -366,7 +366,7 @@
                         </section>
                     </div>
                 </div>
-                <div id="dashboard" class="tab-pane fade">
+                <div id="dashboard" class="tab-pane fade show active">
                     <!-- Dashboard related information and widgets go here -->
                     <div class="iframe-container">
                         <iframe src="https://lookerstudio.google.com/embed/reporting/050bed8b-a53b-4328-aa1e-247550f28c1a/page/qlRiD" frameborder="0" style="border: 0;" allowfullscreen></iframe>
