--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Z1 Winterfest</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -411,90 +412,68 @@
                             <h2>Winner Information</h2>
                             <p style="color: #4b0082;"><strong>NOTE:</strong> Fill a separate form for each event.</p>
                         </div>
-                        <form id="winnerEntryForm">
-                            <div class="mb-3">
-                                <label for="category" class="form-label" style="font-weight: bold;">Category:</label>
-                                <select id="category" class="form-control">
-                                    <!-- Options populated via JS -->
-                                </select>
-                            </div>
-
-                            <div class="mb-3">
-                                <label for="eventName" class="form-label" style="font-weight: bold;">Name:</label>
-                                <select id="eventName" class="form-control">
-                                    <!-- Options populated via JS -->
-                                </select>
-                            </div>
-
-                            <div class="mb-3">
-                                <label for="ageGroup" class="form-label" style="font-weight: bold;">Age Group:</label>
-                                <select id="ageGroup" class="form-control">
-                                    <!-- Options populated via JS -->
-                                </select>
-                            </div>
-
-                            <div class="mb-3">
-                                <label for="genderFormat" class="form-label" style="font-weight: bold;">Gender
-                                    Format:</label>
-                                <select id="genderFormat" class="form-control">
-                                    <option value="Male">Male (Boys/Mens)</option>
-                                    <option value="Female">Female (Girls/Womens)</option>
-                                    <option value="Mixed">Mixed</option>
-                                </select>
-                            </div>
-
-                            <section class="mb-4">
+                    </section>
+                    <form id="winnerEntryForm">
+                        <div class="mb-3">
+                            <label for="category" class="form-label" style="font-weight: bold;">Category:</label>
+                            <select id="category" class="form-control">
+                                <!-- Options populated via JS -->
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="eventName" class="form-label" style="font-weight: bold;">Name:</label>
+                            <select id="eventName" class="form-control">
+                                <!-- Options populated via JS -->
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="ageGroup" class="form-label" style="font-weight: bold;">Age Group:</label>
+                            <select id="ageGroup" class="form-control">
+                                <!-- Options populated via JS -->
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="genderFormat" class="form-label" style="font-weight: bold;">Gender
+                                Format:</label>
+                            <select id="genderFormat" class="form-control">
+                                <option value="Male">Male (Boys/Mens)</option>
+                                <option value="Female">Female (Girls/Womens)</option>
+                                <option value="Mixed">Mixed</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="eventConducted" class="form-label" style="font-weight: bold;">Was the event
+                                conducted?</label>
+                            <select id="eventConducted" name="eventConducted" class="form-control">
+                                <option value="Yes" selected>Yes</option>
+                                <option value="No">No</option>
+                            </select>
+                        </div>
+                        <div id="winnerInfo">
+                            <section class="mb-4" id="firstPlaceSection">
                                 <div class="section-header">
                                     <h2>1st Place</h2>
                                 </div>
-                                <div class="mb-3">
-                                    <label for="firstPlaceName" class="form-label"
-                                        style="font-weight: bold;">Name:</label>
-                                    <input type="text" id="firstPlaceName" class="form-control">
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="firstPlaceApartment" class="form-label"
-                                        style="font-weight: bold;">Apartment Number:</label>
-                                    <input type="text" id="firstPlaceApartment" class="form-control">
-                                </div>
-
-                                <div class="mb-3" id="firstPlaceteamMemberArea" class="form-label"
-                                    style="font-weight: bold;display:none;">
-                                    <label for="firstPlaceteamMembers">Team Members:</label>
-                                    <textarea id="firstPlaceteamMembers" class="form-control"></textarea>
+                                <div id="firstPlaceContent">
                                 </div>
                             </section>
-
-                            <section class="mb-4">
+                            <section class="mb-4" id="secondPlaceSection">
                                 <div class="section-header">
                                     <h2>2nd Place</h2>
                                 </div>
-
-                                <div class="mb-3">
-                                    <label for="secondPlaceName" class="form-label"
-                                        style="font-weight: bold;">Name:</label>
-                                    <input type="text" id="secondPlaceName" class="form-control">
+                                <div id="secondPlaceContent">
                                 </div>
-
-                                <div class="mb-3">
-                                    <label for="secondPlaceApartment" class="form-label"
-                                        style="font-weight: bold;">Apartment Number:</label>
-                                    <input type="text" id="secondPlaceApartment" class="form-control">
-                                </div>
-
-                                <div class="mb-3" id="secondPlaceteamMemberArea" class="form-label"
-                                    style="font-weight: bold;display:none;">
-                                    <label for="secondPlaceteamMembers">Team Members:</label>
-                                    <textarea id="secondPlaceteamMembers" class="form-control"></textarea>
-                                </div>
-
                             </section>
-
-                            <div class="divider"></div>
-                            <button id="winnersFormSubmitBtn" type="button" class="btn btn-primary">Submit</button>
-                        </form>
-                    </section>
+                        </div>
+                        <div class="divider"></div>
+                        <div class="mb-3">
+                            <label for="additionalRemarks" class="form-label"
+                                style="font-weight: bold;">Remarks:</label>
+                            <input type="text" id="additionalRemarks" class="form-control">
+                        </div>
+                        <div class="divider"></div>
+                        <button id="winnersFormSubmitBtn" type="button" class="btn btn-primary">Submit</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -556,6 +535,8 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 </body>
 
 </html>
