disabled winner form

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="tab" href="#paymentreport" id="paymentReportTab">Payment</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="tab" href="#winnersForm" id="winnersFormTab">Winners</a>
-            </li>
+            </li> -->
         </ul>
         <!-- Tab Content -->
         <div class="tab-content">
