--- a/index.html
+++ b/index.html
@@ -370,14 +370,11 @@
                         <div>
                             <strong>Eligibility</strong>
                             <ul class="bullet-points">
-                                <li>Participants must be residents or owners in Z1.</li>
+                                <li>Participants must be residents of Z1.</li>
                                 <li>Participants can only play in their own age category as specified for that event.
                                 </li>
                                 <li>Age validation - If required, organizers will request for age proof of participants
                                     and then assign them to the appropriate age category.</li>
-                                <li>Non Residents - For limited events under the Games & Cultural category, close
-                                    relatives up to 10 years of age are allowed to participate. They will be entered in
-                                    the Guest entry category only. Please contact us on WhatsApp for this.</li>
                             </ul>
                             &nbsp
                             <strong>General Rules</strong>
@@ -498,6 +495,7 @@
         </main>
     </div>
     <div id="loadingSpinner" class="loader" hidden></div>
+    <div id="loadingOverlay" class="overlay" hidden></div>
     <div id="successModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
