fixes and improvements

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                         <div id="flatDisplay" class="mb-3 d-flex justify-content-between align-items-center" style="display: none;">
                             <strong style="color: #2e8b57; text-decoration: underline;"><span
                                     id="flatNumberDisplay"></span></strong>
-                            <button class="green-btn btn-sm" id="registerParticipantBtnCheckout">
+                            <button class="green-btn btn-sm" id="registerParticipantBtnCheckout" style="display: none;">
                                 <i class="fas fa-user-plus"></i> Register
                             </button>
                         </div>
