--- a/index.html
+++ b/index.html
@@ -56,12 +56,10 @@
                         </div>
                         <ul class="bullet-points">
                             <li>Click on <strong>"Register"</strong> to begin.</li>
-                            <li>You can follow the guided process, to fill and submit participation details of
+                            <li>Follow the guided process, to fill and submit participation details of
                                 <strong>all family members</strong> in your flat at once.
                             </li>
-                            <li>When you are done, go to <strong>Checkout</strong> tab, review the details and proceed
-                                with submission.</li>
-                            <li>Last date to submit the form is <strong>Monday, 3rd November 2025.</strong></li>
+                            <li>Registration closes <strong>3rd November 2025.</strong></li>
                         </ul>
                         <!-- Register Button - Prominent placement -->
                         <section class="text-start mt-4 mb-4">
@@ -76,12 +74,11 @@
                             <h1>Fees</h1>
                         </div>
                         <ul class="bullet-points">
-                            <li>Participation fee is <strong>Rs.700/- per flat.</strong> Irrespective of the number of
-                                submissions from your flat, you need to pay this fee <strong>only once</strong>.</li>
+                            <li>Participation fee is <strong>Rs.700/- per flat.</strong> To be paid <strong>only once</strong>, irrespective of number of registrations from the flat.</li>
                             <li>For Master Chef (18+), there is a <strong>refundable</strong> fee of <strong>Rs.1500/- per
                                     participant.</strong> This is to ensure commitment to the competition as it requires
                                 several provisions to be arranged.</li>
-                            <li>If you wish to host a <strong>Food stall</strong>, the fee is <strong>Rs. 800/- per day
+                            <li>For Food Stall, the fee is <strong>Rs. 800/- per day
                                     per stall</strong> (on first come first serve basis).</li>
                         </ul>
                     </section>
