--- a/index.html
+++ b/index.html
@@ -549,55 +549,20 @@
     </div>
     <div id="loadingSpinner" class="loader" hidden></div>
     <div id="loadingOverlay" class="overlay" hidden></div>
-    <div id="successModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <p><strong>Thank you!</strong></p>
-            <p>Your registration is submitted successfully.</p>
-            <p style="color: #4b0082;">Registration Id: <span id="registrationId">...</span></p>
-            <img src="resources/thankyou.png" alt="Thank you" class="img-fluid" />
-            &nbsp
-            <div class="dividerthin"></div>
-            <button id="newRegistrationBtn" class="modern-btn">Submit New Registration</button>
-        </div>
-    </div>
-    <div id="errorModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>An error occurred during registration!</p>
-            <p style="color: #820000c2;">Error details: <span id="errorInfo">...</span></p>
-            <img src="resources/thankyou.png" alt="Thank you" class="img-fluid" />
-            &nbsp
-            <div class="dividerthin"></div>
-            <button id="retryRegistrationBtn" class="modern-btn">Retry Registration</button>
-        </div>
-    </div>
-    <div id="loginModal" class="modal">
-        <div class="modal-content">
-            <h4>Verify Admin</h4>
-            &nbsp
-            <div class="form-group" style="padding-bottom: 10px;">
-                <input type="email" id="userEmail" class="form-control" placeholder="Enter your email" required />
-                <div class="invalid-feedback">Please provide your email.</div>
+
+    <!-- Custom Alert Modal -->
+    <div id="alertModal" class="alert-modal">
+        <div class="alert-modal-content">
+            <div class="alert-modal-header">
+                <h3 id="alertModalTitle">Notification</h3>
+                <span class="alert-modal-close" onclick="hideAlertModal()">&times;</span>
             </div>
-            <div class="form-group">
-                <input type="password" id="userPasskey" class="form-control" placeholder="Enter your passkey"
-                    required />
-                <div class="invalid-feedback">Please provide your passkey.</div>
+            <div class="alert-modal-body">
+                <p id="alertModalMessage">Message goes here</p>
             </div>
-            <div class="dividerthin"></div>
-            <button id="loginButton" class="btn btn-primary">Login</button>
-        </div>
-    </div>
-    <div id="registrationClosedModal" class="modal">
-        <div class="modal-content">
-            <p><strong>Thank you!</strong></p>
-            <p>Z1 Winterfest 2025 registrations are closed now.</p>
-            <p style="color: #4b0082;">You may reach out via WhatsApp for any support needed.</p>
-            <img src="resources/thankyou.png" alt="Thank you" class="img-fluid" />
-            &nbsp
-            <div class="dividerthin"></div>
-            <button id="dashboardButton" class="btn">View Dashboard</button>
+            <div class="alert-modal-footer">
+                <button id="alertModalOkBtn" class="alert-modal-btn" onclick="hideAlertModal()">OK</button>
+            </div>
         </div>
     </div>
 
