--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                     <i class="fas fa-chart-line"></i>
                     <span>Dashboard</span>
                 </button>
-                <button class="mobile-nav-btn" id="nav-support">
+                <button class="mobile-nav-btn" id="nav-admin">
                     <i class="fas fa-question-circle"></i>
-                    <span>Support</span>
+                    <span>Admin</span>
                 </button>
             </nav>
 
@@ -557,9 +557,6 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="mt-2">
-                            <small class="text-muted">Either Apartment or Name is required for search.</small>
-                        </div>
                     </section>
 
                     <!-- Search Results -->
@@ -595,10 +592,10 @@
                 </div>
             </section>
 
-            <section id="support-section" class="mobile-section">
+            <section id="admin-section" class="mobile-section">
                 <div class="container py-3">
                     <div class="section-header">
-                        <h2>Support</h2>
+                        <h2>Admin</h2>
                     </div>
                     <p><strong style="color: #8B4513;">Coming soon!</strong></p>
                 </div>
