--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
             <section id="dashboard-section" class="mobile-section">
                 <div class="container py-3">
                     <div class="section-header">
-                        <h2>Dashboard</h2>
+                        <h2>Search Registrations</h2>
                     </div>
 
                     <!-- Search Form -->
